[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore APP"
authors = ["CapyvaraPaulista <victorbonini.vb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
